fix alignment for referenceWorks links on comments

--- a/client/views/commentary/commentary.import.less
+++ b/client/views/commentary/commentary.import.less
@@ -685,7 +685,7 @@ article.lemma-comment {
   }
 
   p {
-    margin: 7px;
+    margin: 4px 7px;
     width: auto;
     padding: 0;
   }
